test: improve test coverage from 60.8% to 75.8% branches  - Add unit tests for database initialization and connection handling - Add unit tests for config validation scenarios - Add unit tests for error middleware with different error types - Add unit tests for employee model JSON transformation - Add unit tests for salary service calculations - Enhance repository tests with error handling - Enhance service tests with edge cases - Add middleware tests for logging functionality - Fix mock setup for Express Request read-only properties  Coverage improvements: - Branch coverage: 60.8% → 75.8% (+15%) - Working towards 80% threshold  All tests passing

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ DATABASE_PATH=./data/employees.db
 DATABASE_CLIENT=sqlite3
 
 # Security
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001
+ALLOWED_ORIGINS=http://localhost:3000
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
